src/index.css
body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  background-color: #ffffff;
  background-image: url("./assets/bright-squares.png");
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}

.pageFrame {
  width: 1200px;
}

.text-card {
  text-align: center;
}

.card {
  border: 2px solid rgb(180, 180, 180);
  object-fit: 'cover';
  padding: 20px;
}

.navbar {
  padding: 20px;
  border-bottom: 2px solid;
  border-left: 2px solid;
  border-right: 2px solid;
  border-color: rgb(180, 180, 180);
  border-bottom-left-radius: 5px;
  border-bottom-right-radius: 5px;
  background-color: #f5f5f5;
  font-size: small;
}

.border-primary {
  border-color: rgb(180, 180, 180);
}

@media (max-width: 1333px) {
  .pageFrame {
    width: 90%;
  }
}

.nav-link {
  color: rgb(100, 100, 100);
  text-decoration: none;
}

.nav-link:visited {
  color: rgb(100, 100, 100);
}

.nav-link:hover {
  color: rgb(60, 60, 60);
}

.nav-link:active {
  color: rgb(60, 60, 60);
}

